Never actually set argument result

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,7 +3,7 @@
 # Purpose:	builds the test program for the libcmdapp library.
 # Requires:	the libcmdapp library to be installed.
 
-CC		:= $(shell which gcc-13 || which gcc || which clang)
+CC		:= $(shell which gcc || which clang)
 CFLAGS	:= -std=c99 -pedantic -Wall -Wextra \
 		   -Wno-unused-parameter
 SRC		:= main.c
@@ -11,7 +11,7 @@ EXEC	:= main
 LIB		:= cmdapp
 
 CFLAGS 	+= -I/usr/local/include/$(LIB)
-LIBCONF := -L/usr/local/lib -l$(LIB)
+LIBCONF := /usr/local/lib/libcmdapp.a #-L/usr/local/lib -l$(LIB)
 
 test: build_test
 	@bash -c '\
